Fix transparency and alignment

--- a/src/app/room/assistant-route/assistants-manage/collapsible-text/collapsible-text.component.scss
+++ b/src/app/room/assistant-route/assistants-manage/collapsible-text/collapsible-text.component.scss
@@ -5,6 +5,7 @@ div {
 
   .text-wrapper {
     transition: max-height 0.5s ease;
+    align-self: flex-start;
 
     &.collapsed {
       overflow-y: hidden;
